# acme-run

./: Makefile  README.md  TODO.md  acme-run.cabal  default.nix  stack.yaml
abuild/: Main.hs
afold/: Main.hs
aindent/: Main.hs
src/: AcmeRunAcme.sh
src/AcmeRun/: Acme.hs  Lib.hs  Sh.hs
src/AcmeRun/Internal/: Acme.hs  Lib.hs  Sh.hs
test/: HLinter.hs
