name:                acme-run
version:             0.1.0.0
synopsis:            CLI for the metadrift client
description:         Please see README.md
homepage:            https://github.com/ericbmerritt/acme-run
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Merritt
maintainer:          eric@merritt.tech
copyright:           talendant
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     AcmeRun.Acme
                       , AcmeRun.Lib
  other-modules:       AcmeRun.Internal.Acme
                       , AcmeRun.Internal.Lib

  build-depends:       base >= 4.7 && < 5
                       , MissingH
                       , shellmate
                       , filepath
                       , text
                       , transformers
                       , foldl
                       , directory
                       , MissingH
                       , split
                       
  default-language:    Haskell2010

executable abuild
  hs-source-dirs:      abuild
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shellmate
                     , acme-run
                     , text
                     , hindent
  default-language:    Haskell2010

executable aindent
  hs-source-dirs:      aindent
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shellmate
                     , acme-run
                     , text
                     , hindent
                     , transformers
                     , system-filepath
                     
  default-language:    Haskell2010
  
executable afold
  hs-source-dirs:      afold
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shellmate
                     , acme-run
                     , text
                     , hindent
                     , transformers
                     
  default-language:    Haskell2010
  

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , doctest
                     , hlint
                     , acme-run
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite linter
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLinter.hs
  build-depends:       base
                     , hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ericbmerritt/acme-run
